# SmartServoFramework

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README  README.md  SConstruct  libsmartservoframework.pc.cmake
SmartServoFramework/: ControlTables.cpp  ControlTables.h  ControlTablesDynamixel.h  ControlTablesHerkuleX.h  ControllerAPI.h  Dynamixel.cpp  Dynamixel.h  DynamixelController.cpp  DynamixelController.h  DynamixelSimpleAPI.cpp  DynamixelSimpleAPI.h  DynamixelTools.cpp  DynamixelTools.h  HerkuleX.cpp  HerkuleX.h  HerkuleXController.cpp  HerkuleXController.h  HerkuleXSimpleAPI.cpp  HerkuleXSimpleAPI.h  HerkuleXTools.cpp  HerkuleXTools.h  ManagedAPI.h  SerialPort.cpp  SerialPort.h  SerialPortLinux.cpp  SerialPortLinux.h  SerialPortMacOS.cpp  SerialPortMacOS.h  SerialPortQt.cpp  SerialPortQt.h  SerialPortWindows.cpp  SerialPortWindows.h  Servo.cpp  Servo.h  ServoController.cpp  ServoController.h  ServoDynamixel.cpp  ServoDynamixel.h  ServoHerkuleX.cpp  ServoHerkuleX.h  (+11 more)
SmartServoGui/: README.md  SmartServoGui.pro
SmartServoGui/resources/: resources.qrc
SmartServoGui/resources/app/: smartservogui.appdata.xml
SmartServoGui/resources/lang/: fr.ts
SmartServoGui/resources/specs/: AX-12A.html  DRS-0101.html  DRS-0201.html  DRS-0602.html  EX-106p.html  MX-106.html  MX-12W.html  MX-28.html  XH-430-VW210.html  XH-430-VW350.html  XL-320.html  XL-430-W250.html  XM-430-W210.html  XM-540-W150.html  XM-540-W270.html
SmartServoGui/src/: advancescanner.cpp  advancescanner.h  baudratecombobox.cpp  baudratecombobox.h  main.cpp  mainwindow.cpp  mainwindow.h  protocolcombobox.cpp  protocolcombobox.h  qabout.cpp  settings.cpp  settings.h  tabSerial.cpp  tabSerial.h  widgetRegisterTable.cpp  widgetRegisterTable.h  widgetSerialError.cpp  widgetSerialError.h  widgetSerialScan.cpp  widgetSerialScan.h
SmartServoGui/ui/: mainwindow.ui  qabout.ui  settings.ui  tabSerial.ui  widgetSerialScan.ui
doc/: APIs.md  BuildInstructions.md  Documentation.md  ManagedAPI.md  SerialCommunication.md  SimpleAPI.md
documentation/: APIs.md  APIs_documentation.html  BuildInstructions.md  Documentation.md  ManagedAPI.md  SerialCommunication.md  SimpleAPI.md
examples/: SConstruct  ex_advance_scanner.cpp  ex_basic_test.cpp  ex_controller.cpp  ex_simple.cpp  ex_simple_threaded.cpp  ex_sinus_control.cpp
gui/: README.md  SmartServoGui.pro
gui/resources/: resources.qrc
gui/resources/app/: icon.icns  smartservogui.desktop.desktop  smartservogui.icns
gui/resources/devices/: AUTHORS
gui/resources/help/: AUTHORS
gui/resources/lang/: es.ts  fr.qm  fr.ts
gui/resources/specs/: AX-12W.html  AX-18A.html  DRS-0401.html  DRS-0402.html  DRS-0601.html  EX-106.html  MX-64.html  XL-320.html  XM-430-W350.html
gui/src/: advancescanner.cpp  advancescanner.h  main.cpp  mainwindow.cpp  mainwindow.h  qabout.cpp  qabout.h  settings.cpp  settings.h  tabSerial.cpp  tabSerial.h  widgetRegisterTable.cpp  widgetRegisterTable.h  widgetSerialError.cpp  widgetSerialError.h  widgetSerialScan.cpp  widgetSerialScan.h
gui/ui/: advancescanner.ui  mainwindow.ui  qabout.ui  settings.ui  tabSerial.ui  widgetRegisterTable.ui  widgetSerialError.ui  widgetSerialScan.ui
src/: ControlTables.cpp  ControlTables.h  ControlTablesDynamixel.h  ControlTablesHerkuleX.h  ControllerAPI.cpp  ControllerAPI.h  Dynamixel.cpp  Dynamixel.h  DynamixelController.cpp  DynamixelController.h  DynamixelSimpleAPI.cpp  DynamixelSimpleAPI.h  DynamixelTools.cpp  DynamixelTools.h  HerkuleX.cpp  HerkuleX.h  HerkuleXController.cpp  HerkuleXController.h  HerkuleXSimpleAPI.cpp  HerkuleXSimpleAPI.h  HerkuleXTools.cpp  HerkuleXTools.h  SerialPort.cpp  SerialPort.h  SerialPortLinux.cpp  SerialPortLinux.h  SerialPortMacOS.cpp  SerialPortMacOS.h  SerialPortQt.cpp  SerialPortQt.h  SerialPortWindows.cpp  SerialPortWindows.h  Servo.cpp  Servo.h  ServoAX.cpp  ServoAX.h  ServoDRS.cpp  ServoDRS.h  ServoDynamixel.cpp  ServoDynamixel.h  (+16 more)
